<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noItemsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:context="com.zybooks.jeanpetitims.ItemActivity">

            <TextView
                android:id="@+id/noItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_items"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/addItemButton" />

            <Button
                android:id="@+id/addItemButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_item"
                android:onClick="addItemButtonClick"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/showItemsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            tools:context="com.zybooks.jeanpetitims.ItemActivity">

            <TextView
                android:id="@+id/itemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                tools:text="item"
                style="@style/ItemLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/qty_layout"/>

            <LinearLayout
                android:id="@+id/qty_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/itemText"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintTop_toBottomOf="@id/itemText"
                android:textAlignment="center"
                android:gravity="center">

                <TextView
                    android:id="@+id/quantityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/quantity_label"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:id="@+id/quantityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:textSize="18sp"
                    android:text="@string/quantity_text" />

            </LinearLayout>

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                style="@style/ItemLabel_2"
                app:layout_constraintTop_toBottomOf="@+id/qty_layout"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/descriptionText"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                tools:text="@string/description_label"
                style="@style/ItemEditText_2"
                app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
                app:layout_constraintLeft_toRightOf="@id/descriptionLabel"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>